Update and rename portfolio.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Foundation | Welcome</title>
+<title>Alobex</title>
 <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 </head>
 <body>
@@ -26,8 +26,8 @@
 </div>
 <div class="callout primary">
 <div class="row column">
-<h1>Hello! This is the portfolio of a very witty person.</h1>
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla.</p>
+<h1>Alobex</h1>
+<p class="lead">Hello! Here, you can find my projects</p>
 </div>
 </div>
 <div class="row small-up-2 medium-up-3 large-up-4">
