--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
 <style>
-      @thumbnail NESbox {
+      thumbnail NESbox {
     height: 550px; 
     width: 550px; 
     max-width: 550px; 
