--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <div class="row column">
 <br>
 <img class="thumbnail" src="http://placehold.it/550x350">
-<h5>Mike Mikerson</h5>
-<p>Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo.</p>
+<h5>Alobex</h5>
+<p>Hello, I'm Alobex, and I am an 11-year old kid that likes anything that involves a computer, So check my projects below!</p>
 </div>
 </div>
 <div class="off-canvas-content" data-off-canvas-content>
