--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Alobex</title>
 <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+<style> 
+      @font-face {
+            src: url(Comfortaa.ttf);
+    		font-family: Comfortaa;
+	}
+
+      body {
+		font-family: Comfortaa;
+	}
+</style>
 </head>
 <body>
 <div class="off-canvas-wrapper">
