--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     		font-family: Comfortaa;
 	}
 
-      body {
+	p {
+		font-family: Comfortaa;
+	}
+	h5 {
+		font-family: Comfortaa;
+	}
+	h1 {
 		font-family: Comfortaa;
 	}
 </style>
