--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div class="row small-up-2 medium-up-3 large-up-4">
 <div class="column">
 <img class="thumbnail" src="office.PNG" width="550" height="550">
-<a href="http://alobex.github.io/the-office"><h5>The Office</h5></a>
+<a href="http://alobex.github.io/The-Office"><h5>The Office</h5></a>
 </div>
 <div class="column">
 <img class="thumbnail" src="http://placehold.it/550x550">
