--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 <style> 
       @font-face {
-            src: url(Comfortaa.ttf);
-    		font-family: Comfortaa;
+            src: url(OCR A Std.ttf);
+    		font-family: ocr a std;
 	}
 
 	p {
-		font-family: Comfortaa;
+		font-family: ocr a std;
 	}
 	h5 {
-		font-family: Comfortaa;
+		font-family: ocr a std;
 	}
 	h1 {
-		font-family: Comfortaa;
+		font-family: ocr a std;
 	}
 </style>
 </head>
