--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <style> 
       @font-face {
             src: url(OCR A Std.ttf);
-    		font-family: ocr a std;
+    		font-family: OCR A Std;
 	}
 
 	p {
-		font-family: ocr a std;
+		font-family: OCR A Std;
 	}
 	h5 {
-		font-family: ocr a std;
+		font-family: OCR A Std;
 	}
 	h1 {
-		font-family: ocr a std;
+		font-family: OCR A Std;
 	}
 </style>
 </head>
