--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 <style> 
       @font-face {
-            src: url(OCR A Std.ttf);
+            src: url(OCR_A_Std.ttf);
     		font-family: OCR A Std;
 	}
 
