--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 <style> 
       @font-face {
-            src: url(OCR_A_Std.ttf);
-    		font-family: OCR_A_Std;
+            src: url(dtsans.ttf);
+    		font-family: menu;
 	}
 
 	p {
@@ -23,6 +23,7 @@
 </style>
 </head>
 <body>
+<div id="sans">
 <div class="off-canvas-wrapper">
 <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
 <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
@@ -44,6 +45,9 @@
 <div class="row column">
 <h1>Alobex</h1>
 <p class="lead">Hello! Here, you can find my projects</p>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="row small-up-2 medium-up-3 large-up-4">
