--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     		font-family: menu;
 	}
 
-	p {
-		font-family: OCR_A_Std;
+	#sans {
+		font-family: menu;
 	}
 	h5 {
 		font-family: OCR_A_Std;
@@ -45,6 +45,7 @@
 <div class="row column">
 <h1>Alobex</h1>
 <p class="lead">Hello! Here, you can find my projects</p>
+</div>
 </div>
 </div>
 </div>
