--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <p>Hello, I'm Alobex, and I am an 11-year old kid that likes anything that involves a computer, So check my projects below!</p>
 </div>
 </div>
+</div>
+</div>
 <div class="off-canvas-content" data-off-canvas-content>
 <div class="title-bar hide-for-large">
 <div class="title-bar-left">
