--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
             src: url(dtsans.ttf);
     		font-family: menu;
 	}
-
-	.{
+	.off-canvas-wrapper {
 		font-family: menu;
 	}
-	h5 {
-		font-family: OCR_A_Std;
+	.title-bar-hide-for-large{
+		font-family: menu;
 	}
-	h1 {
-		font-family: OCR_A_Std;
+	.callout-primary {
+		font-family: menu;
+	}
+      @font-face {
+      	    src: url(dtmono.ttf);
+      	    	font-family: mono;
+      }	
+	.row-small-up-2-medium-up-3-large-up-4 {
+		font-family: "mono"";
 	}
 </style>
 </head>
@@ -36,19 +42,19 @@
 </div>
 </div>
 <div class="off-canvas-content" data-off-canvas-content>
-<div class="title-bar hide-for-large">
+<div class="title-bar-hide-for-large">
 <div class="title-bar-left">
 <button class="menu-icon" type="button" data-open="my-info"></button>
 <span class="title-bar-title">Alobex</span>
 </div>
 </div>
-<div class="callout primary">
+<div class="callout-primary">
 <div class="row column">
 <h1>Alobex</h1>
 <p class="lead">Hello! Here, you can find my projects</p>
 </div>
 </div>
-<div class="row small-up-2 medium-up-3 large-up-4">
+<div class="row-small-up-2-medium-up-3-large-up-4">
 <div class="column">
 <img class="thumbnail" src="office.PNG" width="550" height="550">
 <a href="http://alobex.github.io/The-Office"><h5>The Office</h5></a>
