--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       	    	font-family: mono;
       }	
 	.row-small-up-2-medium-up-3-large-up-4 {
-		font-family: "mono"";
+		font-family: "mono";
 	}
 </style>
 </head>
