--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
       @font-face {
             src: url(dtsans.ttf);
     		font-family: menu;
-    	    src: url(dtmono.ttf);
-      	    	font-family: mono;
       }
       p {
       	font-family: menu;
@@ -33,6 +31,7 @@
 <div class="title-bar-left">
 <button class="menu-icon" type="button" data-open="my-info"></button>
 <span class="title-bar-title">Alobex</span>
+</div>
 </div>
 </div>
 <div class="callout-primary">
