--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <p class="lead">Hello! Here, you can find my projects</p>
 </div>
 </div>
+</div>
 <div class="row-small-up-2-medium-up-3-large-up-4">
 <div class="column">
 <img class="thumbnail" src="office.PNG" width="550" height="550">
