--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             src: url(dtsans.ttf);
     		font-family: menu;
       }
-      p, h5 {
+      p, h5, span, h1 {
       	font-family: menu;
       }
 </style>
