--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
       @font-face {
             src: url(dtsans.ttf);
     		font-family: menu;
-      }
-      p, h5, span, h1 {
-      	font-family: menu;
-      }
+	}
+
+	p, h5, h1 {
+		font-family: menu;
+	}
 </style>
 </head>
 <body>
@@ -23,23 +24,23 @@
 <br>
 <img class="thumbnail" src="http://placehold.it/550x350">
 <h5>Alobex</h5>
-<p>Hello, I'm Alobex, and I am an 12-year old kid that likes anything that involves a computer, So check my projects below!</p>
+<p>Hello, I'm Alobex, and I am an 11-year old kid that likes anything that involves a computer, So check my projects below!</p>
 </div>
 </div>
 <div class="off-canvas-content" data-off-canvas-content>
-<div class="title-bar-hide-for-large">
+<div class="title-bar hide-for-large">
 <div class="title-bar-left">
 <button class="menu-icon" type="button" data-open="my-info"></button>
 <span class="title-bar-title">Alobex</span>
 </div>
-<div class="callout-primary">
+</div>
+<div class="callout primary">
 <div class="row column">
 <h1>Alobex</h1>
 <p class="lead">Hello! Here, you can find my projects</p>
 </div>
 </div>
-</div>
-<div class="row-small-up-2-medium-up-3-large-up-4">
+<div class="row small-up-2 medium-up-3 large-up-4">
 <div class="column">
 <img class="thumbnail" src="office.PNG" width="550" height="550">
 <a href="http://alobex.github.io/The-Office"><h5>The Office</h5></a>
@@ -81,7 +82,7 @@
 <h5>My Site</h5>
 </div>
 <div class="column">
-<img class="thumbnail" src="http://placehold.it/550x550">
+<img class="thumbnail" src="http://placehold.io/550x550">
 <h5>My Site</h5>
 </div>
 <div class="column">
@@ -90,6 +91,7 @@
 </div>
 </div>
 <hr>
+</div>
 </div>
 </div>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
