--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Alobex</title>
 <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-<style> 
-      @font-face {
-            src: url(dtsans.ttf);
+<style>
+	@font-face {
     		font-family: menu;
+    		src: url('dtsans.ttf');
 	}
 
-	p, h5, h1 {
+	@font-face {
+		font-family: mono;
+		src: url('dtmono.ttf');
+	}
+	p, h5, {
 		font-family: menu;
+	}
+	h1 {
+		font-family: mono;
 	}
 </style>
 </head>
