--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
-<html class="no-js" lang="en">
+<!DOCTYPE html>
+<html class="no-js" lang="en" xmls>
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Alobex</title>
-<link rel="shortcut icon" href='/favicon.ico'/>
+<link rel="shortcut icon" href="/favicon.ico" />
 <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 <style>
 	@font-face {
